--- a/module4_advanced_dev/m4.lesson02.md
+++ b/module4_advanced_dev/m4.lesson02.md
@@ -12,7 +12,7 @@
 1. Deployment
 2. DevOps 
 3. Deployment Environments
-4. Continuous Integration, Delivery and Deployment
+4. Letters and Meanings
 5. CI/CD with Heruko
 6. Let's talk CI
 
@@ -25,18 +25,37 @@ Practice - deploy using Heroku CLI
 steps 1-5
 
 ---
+
+### Deployment
+Heroku provide different deployment options:
+* Using Git + Heroku CLI
+* Using Github integration
+* Using Docker (New in Heroku)
+
+A word about PaaS and IaaS
+
+---
+
+### DevOps
+<img src="./assets/devops_define.png" height="400">
+
+---
 ### DevOps
 The process of Getting new Idea (new code) out to the world (production server).
 
 DevOps Deals with connecting Development and Operation... what can be confederated as "Operation"?
 * Everything between you and production: Build, Auto-Testing, QA etc. 
 * Logs and Clients Feedback (Which prioritize task for next sprint)
+* The goal: shorten development life cycle
+
 
 ---
 ### DevOps
 DevOps should look for
 - Re-work (deployment)
 - Overhead (deployment complexity)
+
+
 
 ---
 
@@ -48,10 +67,29 @@ DevOps should look for
 * ***Production/Live*** - Serves end-users/clients
 
 ---
-### Continuous Integration, Delivery and Deployment
-* ***Continuous Integration (CI)*** - Automated process which integrate code on each change (Commit)
-* ***Continuous Delivery (CD)*** - The Capability to deploy an Environment at any given time
-* ***Continuous Deployment (CD)*** - Automated process which deploy on each code change (Commit)
+### DevOps
+DevOps & Automation
+<div>
+<img src="./assets/worked-in-dev.jpg" height="400">
+</div>
+
+---
+### Letters and Meanings
+* ***CI*** (Continuous Integration) - Automated process which integrate code on each change (Commit)
+<!-- .element: class="fragment" -->
+
+* ***CD*** (Continuous Delivery) - The Capability to deploy an Environment at any given time
+<!-- .element: class="fragment" -->
+
+* ***CD*** (Continuous Deployment) - Automated process which deploy on each code change (Commit)
+<!-- .element: class="fragment" -->
+
+* ***ACDC*** (???)
+<!-- .element: class="fragment" -->
+
+<img src="./assets/acdc.jpeg" style="position: absolute; top: 50px; right: 30px">
+<!-- .element: class="fragment" -->
+
 
 ---
 
@@ -66,7 +104,7 @@ Make sure to use [process.env.PORT](https://stackoverflow.com/questions/15693192
 ---
 ### CI/CD 
 Auto Deploy from master 
-* Create / Fork [simple node project](https://github.com/webbeast2018/hello-ci-cd-backend)
+* Create / Fork [simple node project](https://github.com/webbeast2019/hello-cicd-backend)
 * Add auto deployment [connect to github](https://devcenter.heroku.com/articles/github-integration#automatic-deploys) (app dashboard > deploy > deployment methods)
 * After connected to github repo, Enable Automatic deploys
 * Test by merging a new PR
@@ -89,7 +127,7 @@ Add Production Environment and Delivery on demand
 ---
 ### CI/CD 
 Add frontend project
-* Create / Fork [frontend project](https://github.com/webbeast2018/hello-cicd-frontend)
+* Create / Fork [frontend project](https://github.com/webbeast2019/hello-cicd-frontend)
 * Start the app. node local and production proxy configs
 * Install express on frontend project, create simple static express server (don't forget process.env.PORT)
 * Test your frontend server (build and serve)
@@ -100,15 +138,14 @@ Deploy frontend project
 * Add a main entry in package.json
 * npm start should point to server
 * Add a postinstall entry in package.json
-* Tip: use Production build flag
-* Tip: use absolute path
+* Tip: remember to set the correct `homepage` entry in your `package.json`
 
 ---
 ### CI/CD
 Deploy frontend project
 ```js
 {
-  "name": "hello-ci-cd-frontend",
+  "name": "hello-cicd-frontend",
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
@@ -128,11 +165,19 @@ What we would like our integration service to do?
 * Integration Tasks and Tests
 
 
+
+---
+### Let's talk CI
+Server side testing:
+* Add testing using [jest](https://jestjs.io/docs/en/getting-started.html)
+* use our [jest-playground](https://github.com/webbeast2019/jest-playground) for jest refreshment
+
 ---
 ### Let's talk CI - Travis
 * go to https://travis-ci.org/
 * sign in with github, follow [these steps](https://docs.travis-ci.com/user/getting-started/#to-get-started-with-travis-ci)
 * add .travis.yml
+
 see also:
 https://medium.com/@felipeluizsoares/automatically-deploy-with-travis-ci-and-heroku-ddba1361647f
 
