--- a/module4_advanced_dev/m4.lesson02.md
+++ b/module4_advanced_dev/m4.lesson02.md
@@ -173,13 +173,24 @@ Server side testing:
 * use our [jest-playground](https://github.com/webbeast2019/jest-playground) for jest refreshment
 
 ---
-### Let's talk CI - Travis
+### Let's talk CI
+Travis
 * go to https://travis-ci.org/
 * sign in with github, follow [these steps](https://docs.travis-ci.com/user/getting-started/#to-get-started-with-travis-ci)
 * add .travis.yml
 
 see also:
 https://medium.com/@felipeluizsoares/automatically-deploy-with-travis-ci-and-heroku-ddba1361647f
+
+---
+### Let's talk CI
+CI => CD
+
+We can provide CI output as CD input
+* Make sure travis is working correctly
+* Install Travis CLI
+* Integrate Travis with heroku according to [the docs](https://docs.travis-ci.com/user/deployment/heroku/)
+* Disable Heroku auto-deployment (will be initiated by Heroku)
 
 ---
 ### Further read
