--- a/module4_advanced_dev/m4.lesson05.md
+++ b/module4_advanced_dev/m4.lesson05.md
@@ -15,23 +15,79 @@ https://firebase.google.com/docs/rules
 https://firebase.google.com/docs/reference/security/database/
 
 ### Agenda
-1. 
-2. 
+1. What is firebase
+2. Tools overview
+3. Practice time
 
 ---
 
-### A
+### What is firebase
+Firebase is a Backend-as-a-Service provided by google.
+<iframe width="560" height="315" src="https://www.youtube.com/embed/O17OWyx08Cg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+---
+
+### What is firebase
+
+Pros:
+1. No need for server / database configuration and deployment
+2. Performance oriented and scalable
+3. Starting up if for free
+4. Use only what you need
+
+---
+
+### What is firebase
+
+Cons:
+1. Technical limitation as app get complex
+2. Coupled and dependent on Google
+3. Moving to a different solution may take lots of time and efforts
+4. Can be pricey when you have lots of users
+
+Bottom line:
+
+Great for MVP, should be considerate carefully for larger projects
+
+---
+### Tools overview
+Firebase provide lots of tools, among them are Hosting, easy authentication
+2 types of databases, A/B testing, Crash reports, great CLI tools etc.
+
+We'll be using:
+* Hosting
+* Authentication
+* Database
+* Cloud Functions
+
+---
+
+### Practice time
+Trivia battle app.
+
+Requirements step 1:
+* User can login / logout with google
+* User choose to can solve trivia questions and get score
+* Minimal UI
+
+---
+
+### Practice time
+Requirements step 2:
+* User can choose to battle against other users
+* After click user solve trivia quiz (3-5 questions) 
+* User wait for partner to solve the same quiz
+* Whoever has the most correct answer get the scores (tie = nobody get score)
 
 ---
 
 ### Further reading
-* []()
+* [Do you need to hide your Firebase API keys?](https://javebratt.com/hide-firebase-api/)
+* [Is it safe to expose Firebase apiKey to the public?](https://stackoverflow.com/questions/37482366/is-it-safe-to-expose-firebase-apikey-to-the-public)
 
 ---
 
-### Home Work:
-* Finish class practice
-
 ### Extra
-* Investigate demo project
+* [Firebase Security Rules](https://firebase.google.com/docs/rules)
+* [Firebase Database Security Rules API](https://firebase.google.com/docs/reference/security/database/)
+* [Firebase Alternatives](https://www.redbytes.in/firebase-alternatives/)
