--- a/module4_advanced_dev/m4.lesson06.md
+++ b/module4_advanced_dev/m4.lesson06.md
@@ -152,7 +152,4 @@ see [docker-node](https://github.com/nodejs/docker-node/blob/master/README.md#do
 * [Internet-Israel Docker Guides](https://internet-israel.com/category/%D7%9E%D7%93%D7%A8%D7%99%D7%9B%D7%99%D7%9D/docker/)
 * [Learn Docker in 20 Minutes](https://www.youtube.com/watch?v=wCTTHhehJbU)
 * [Docker command line](https://docs.docker.com/engine/reference/commandline/cli/)
-
-
-### Extra
-* Investigate demo project
+* [The Difference between RUN and CMD in a Dockerfile](https://nickjanetakis.com/blog/docker-tip-7-the-difference-between-run-and-cmd)
